# ArchipelagoDiscordBot

./: .gitignore  AGENTS.md  CommonClient.py  ModuleUpdate.py  README.md  pyproject.toml
discord_bot/webapi_based/: archipelago_webapi_readme.md  main.py
discord_bot/websocket_based/: README.md  main.py
