[project]
name = "archipelago"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "colorama==0.4.6",
    "websockets==13.1",
    "PyYAML==6.0.3",
    "jellyfish==1.2.1",
    "jinja2==3.1.6",
    "schema==0.7.8",
    "kivy==2.3.1",
    "bsdiff4==1.2.6",
    "platformdirs==4.9.4",
    "certifi==2026.2.25",
    "cython==3.2.4",
    "cymem==2.0.13",
    "orjson==3.11.7",
    "typing_extensions==4.15.0",
    "pyshortcuts==1.9.7",
    "pathspec==1.0.4",
    "discord>=2.3.2",
    "aiohttp>=3.14.1",
    "dotenv>=0.9.9",
]
