[project]
name = "archipelago"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "colorama==0.4.6",
    "websockets==13.1",
    "PyYAML==6.0.3",
    "jellyfish==1.2.1",
    "jinja2==3.1.6",
    "schema==0.7.8",
    "kivy==2.3.1",
    "bsdiff4==1.2.6",
    "platformdirs==4.9.4",
    "certifi==2026.2.25",
    "cython==3.2.4",
    "cymem==2.0.13",
    "orjson==3.11.7",
    "typing_extensions==4.15.0",
    "pyshortcuts==1.9.7",
    "pathspec==1.0.4",
    "discord>=2.3.2",
    "aiohttp>=3.14.1",
    "dotenv>=0.9.9",
    "setuptools>=75,<81",
    "maseya-z3pr>=1.0.0rc1",
    "kivymd",
    "pymemoryeditor>=2.0.1",
    "zilliandomizer",
    "dolphin-memory-engine>=1.3.1",
    "nest-asyncio>=1.6.0",
    "pymem>=1.14.0",
    "mpyq>=0.2.5",
    "portpicker>=1.6.0",
    "pyevermizer>=0.50.1",
    "loguru>=0.7.3",
    "factorio-rcon-py>=2.1.3",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD", rev = "5ff9d0d" }
zilliandomizer = { git = "https://github.com/beauxq/zilliandomizer", rev = "96d9a20f8278cee64bb4db859fbd874e0f332d36" }

